Bug 450662 - "Could not determine the type of archive of the downloaded file" errors for valid-seeming archives
Summary: "Could not determine the type of archive of the downloaded file" errors for v...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.91.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-21 17:06 UTC by Connor Kunzmann
Modified: 2022-03-07 22:19 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.93
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Connor Kunzmann 2022-02-21 17:06:43 UTC
STEPS TO REPRODUCE
1. Attempt to install a cursor by navigating to System Settings > Appearance > Cursors, clicking Get New Cursors..., and clicking Install next to any of the results.
2.  Attempt to install a cursor by navigating to System Settings > Appearance > Cursors, clicking Get New Cursors... and clicking the search result, then clicking the Install button in the upper right-hand portion of the window
3.  Manually place a cursor theme into ~/.local/share/icons/ and look for it in the aforementioned section of System Settings.

OBSERVED RESULT
1. The cursor theme will appear to install successfully, but when closing the search results screen the new cursor theme will have the default Breeze cursors and not the new ones. Clicking the theme and then clicking Apply has no effect.
2. A dialog box saying "Could not determine the type of archive of the downloaded file /tmp/NameOfTheme.tar. When closing it, another appears saying "File not found".
3. The theme does not appear in the list of cursor themes at all.

EXPECTED RESULT
The cursor themes should install as usual; this feature worked in a prior installation of KDE Plasma I had been using.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Neon User 5.24
KDE Plasma Version: 5.24.1
KDE Frameworks Version:  5.91.0
Qt Version: 5.13.3

ADDITIONAL INFORMATION
Anecdotally, I have seen that other KDE Plasma users on Reddit are posting about issues applying and searching for themes (color schemes, icons).
Comment 1 Nate Graham 2022-02-22 03:21:31 UTC
Hmm, those methods all work for me with a few random cursor themes I tested. Can you provide an example of a cursor theme that is broken for you?

If you use method 1 and then reboot, is the cursor theme applied as you expect?
Comment 2 Connor Kunzmann 2022-02-22 13:39:01 UTC
(In reply to Nate Graham from comment #1)
> Hmm, those methods all work for me with a few random cursor themes I tested.
> Can you provide an example of a cursor theme that is broken for you?
> 
> If you use method 1 and then reboot, is the cursor theme applied as you
> expect?

A good example would be "X11 DEFAULT BLACK CURSOR SET"; I am unable to install this theme successfully with any method, though I'm unable to install any cursor theme. All cursor themes do this for me - occasionally, I'll find one that will appear to install successfully, but the theme will still show the default Breeze set in its preview. Clicking and applying the theme does nothing. Rebooting does not seem to make any difference in any configuration.
Comment 3 Nate Graham 2022-02-22 17:39:29 UTC
Tried with that theme and got "Could not determine the type of archive of the downloaded file /tmp/xNPgEi-X11-Default-Black.tar". The mimetype seems fine to me though:

$ file /tmp/xNPgEi-X11-Default-Black.tar
/tmp/xNPgEi-X11-Default-Black.tar: POSIX tar archive (GNU)

Seems like an KNS error; moving there.
Comment 4 Alexander Lohnau 2022-03-07 20:27:41 UTC
Can confirm, seems like the
Comment 5 Alexander Lohnau 2022-03-07 20:29:15 UTC
checks for the mime types it just missing an entry.
Comment 6 Bug Janitor Service 2022-03-07 20:32:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/172
Comment 7 Alexander Lohnau 2022-03-07 22:18:48 UTC
Git commit 82f04bff174a4bb307aa9b39aedf271c200b0545 by Alexander Lohnau.
Committed on 07/03/2022 at 20:29.
Pushed by ngraham into branch 'master'.

Fix certain tars not being recognized as valid archives

KArchive can handle those too.

M  +1    -0    src/core/installation.cpp

https://invent.kde.org/frameworks/knewstuff/commit/82f04bff174a4bb307aa9b39aedf271c200b0545