Fix certain tars not being recognized as valid archives

KArchive can handle those too.

BUG: 450662